--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -5,8 +5,8 @@
     <title>Contact US</title>
     <meta name="author" content="Gurjant Singh">
     <meta name="description" content="Bookshop">
-    <meta name="keywords" content="Bookshop"> 
-    
+    <meta name="keywords" content="Bookshop">
+
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/mobile.css">
     <link rel="stylesheet" href="../css/carosel.css">
@@ -15,28 +15,26 @@
   <body class="body">
     <!-- create a logo area in header -->
     <img src="../img/logo.png" class="logo" alt="image">
-    <div   class="topnav">
+    <div class="topnav">
       <a href="../index.html">
-        <iconify-icon inline icon="mdi:home"></iconify-icon> Home</a
-      >
+        <iconify-icon inline icon="mdi:home"></iconify-icon> Home</a>
       <!-- selected nav bar -->
-      <a href="shop.html"
-        ><iconify-icon inline icon="mdi:shop"></iconify-icon> Shop</a
-      >
+      <a href="shop.html"><iconify-icon inline icon="mdi:shop"></iconify-icon>
+        Shop</a>
       <a href="contact.html" class="active">
         <iconify-icon inline icon="ic:outline-contact-support"></iconify-icon>
-        Contact Us</a
-      >
-      <a href="login.html"
-        ><iconify-icon inline icon="material-symbols:login"></iconify-icon>
-        Login</a
-      >
+        Contact Us</a>
+      <a href="login.html"><iconify-icon inline icon="material-symbols:login"></iconify-icon>
+        Login</a>
       <!-- searchbutton-->
+      <div class="search">
+        <input type="text" placeholder="Search..">
+        <button type="submit"><iconify-icon inline icon="ic:outline-search"></iconify-icon></button>
+      </div>
     </div>
 
     <div class="contact-page">
       <!-- <img src="../img/other/shop.jpg" class="bannerIMG" alt="shop"> -->
-
       <div class="main-section-heading">
         <iconify-icon inline icon="mdi:about"></iconify-icon>About Us
       </div>
@@ -58,80 +56,80 @@
         <blockquote>
           This shop is the best. It gives cheap books and staff is very
           helpful.. <br>
-          <iconify-icon inline icon="material-symbols:star"></iconify-icon
-          ><iconify-icon inline icon="material-symbols:star"></iconify-icon
-          ><iconify-icon inline icon="material-symbols:star"></iconify-icon
-          ><iconify-icon inline icon="material-symbols:star"></iconify-icon
-          ><iconify-icon inline icon="material-symbols:star"></iconify-icon>
+          <iconify-icon inline icon="material-symbols:star"></iconify-icon><iconify-icon
+            inline icon="material-symbols:star"></iconify-icon><iconify-icon
+            inline icon="material-symbols:star"></iconify-icon><iconify-icon
+            inline icon="material-symbols:star"></iconify-icon><iconify-icon
+            inline icon="material-symbols:star"></iconify-icon>
         </blockquote>
         <blockquote>
           This shop is the best. It gives cheap books and staff is very
           helpful..<br>
-          <iconify-icon inline icon="material-symbols:star"></iconify-icon
-          ><iconify-icon inline icon="material-symbols:star"></iconify-icon
-          ><iconify-icon inline icon="material-symbols:star"></iconify-icon
-          ><iconify-icon inline icon="material-symbols:star"></iconify-icon
-          ><iconify-icon inline icon="material-symbols:star"></iconify-icon>
+          <iconify-icon inline icon="material-symbols:star"></iconify-icon><iconify-icon
+            inline icon="material-symbols:star"></iconify-icon><iconify-icon
+            inline icon="material-symbols:star"></iconify-icon><iconify-icon
+            inline icon="material-symbols:star"></iconify-icon><iconify-icon
+            inline icon="material-symbols:star"></iconify-icon>
         </blockquote>
         <blockquote>
           This shop is the best. It gives cheap books and staff is very
           helpful..<br>
-          <iconify-icon inline icon="material-symbols:star"></iconify-icon
-          ><iconify-icon inline icon="material-symbols:star"></iconify-icon
-          ><iconify-icon inline icon="material-symbols:star"></iconify-icon
-          ><iconify-icon inline icon="material-symbols:star"></iconify-icon
-          ><iconify-icon inline icon="material-symbols:star"></iconify-icon>
+          <iconify-icon inline icon="material-symbols:star"></iconify-icon><iconify-icon
+            inline icon="material-symbols:star"></iconify-icon><iconify-icon
+            inline icon="material-symbols:star"></iconify-icon><iconify-icon
+            inline icon="material-symbols:star"></iconify-icon><iconify-icon
+            inline icon="material-symbols:star"></iconify-icon>
         </blockquote>
         <blockquote>
           This shop is the best. It gives cheap books and staff is very
           helpful..<br>
-          <iconify-icon inline icon="material-symbols:star"></iconify-icon
-          ><iconify-icon inline icon="material-symbols:star"></iconify-icon
-          ><iconify-icon inline icon="material-symbols:star"></iconify-icon
-          ><iconify-icon inline icon="material-symbols:star"></iconify-icon
-          ><iconify-icon inline icon="material-symbols:star"></iconify-icon>
+          <iconify-icon inline icon="material-symbols:star"></iconify-icon><iconify-icon
+            inline icon="material-symbols:star"></iconify-icon><iconify-icon
+            inline icon="material-symbols:star"></iconify-icon><iconify-icon
+            inline icon="material-symbols:star"></iconify-icon><iconify-icon
+            inline icon="material-symbols:star"></iconify-icon>
         </blockquote>
         <blockquote>
           This shop is the best. It gives cheap books and staff is very
           helpful..<br>
-          <iconify-icon inline icon="material-symbols:star"></iconify-icon
-          ><iconify-icon inline icon="material-symbols:star"></iconify-icon
-          ><iconify-icon inline icon="material-symbols:star"></iconify-icon
-          ><iconify-icon inline icon="material-symbols:star"></iconify-icon
-          ><iconify-icon inline icon="material-symbols:star"></iconify-icon>
+          <iconify-icon inline icon="material-symbols:star"></iconify-icon><iconify-icon
+            inline icon="material-symbols:star"></iconify-icon><iconify-icon
+            inline icon="material-symbols:star"></iconify-icon><iconify-icon
+            inline icon="material-symbols:star"></iconify-icon><iconify-icon
+            inline icon="material-symbols:star"></iconify-icon>
         </blockquote>
         <blockquote>
           This shop is the best. It gives cheap books and staff is very
           helpful..<br>
-          <iconify-icon inline icon="material-symbols:star"></iconify-icon
-          ><iconify-icon inline icon="material-symbols:star"></iconify-icon
-          ><iconify-icon inline icon="material-symbols:star"></iconify-icon
-          ><iconify-icon inline icon="material-symbols:star"></iconify-icon
-          ><iconify-icon inline icon="material-symbols:star"></iconify-icon>
+          <iconify-icon inline icon="material-symbols:star"></iconify-icon><iconify-icon
+            inline icon="material-symbols:star"></iconify-icon><iconify-icon
+            inline icon="material-symbols:star"></iconify-icon><iconify-icon
+            inline icon="material-symbols:star"></iconify-icon><iconify-icon
+            inline icon="material-symbols:star"></iconify-icon>
         </blockquote>
         <blockquote>
           This shop is the best. It gives cheap books and staff is very
           helpful..<br>
-          <iconify-icon inline icon="material-symbols:star"></iconify-icon
-          ><iconify-icon inline icon="material-symbols:star"></iconify-icon
-          ><iconify-icon inline icon="material-symbols:star"></iconify-icon
-          ><iconify-icon inline icon="material-symbols:star"></iconify-icon
-          ><iconify-icon inline icon="material-symbols:star"></iconify-icon>
+          <iconify-icon inline icon="material-symbols:star"></iconify-icon><iconify-icon
+            inline icon="material-symbols:star"></iconify-icon><iconify-icon
+            inline icon="material-symbols:star"></iconify-icon><iconify-icon
+            inline icon="material-symbols:star"></iconify-icon><iconify-icon
+            inline icon="material-symbols:star"></iconify-icon>
         </blockquote>
         <blockquote>
           This shop is the best. It gives cheap books and staff is very
           helpful..<br>
-          <iconify-icon inline icon="material-symbols:star"></iconify-icon
-          ><iconify-icon inline icon="material-symbols:star"></iconify-icon
-          ><iconify-icon inline icon="material-symbols:star"></iconify-icon
-          ><iconify-icon inline icon="material-symbols:star"></iconify-icon
-          ><iconify-icon inline icon="material-symbols:star"></iconify-icon>
+          <iconify-icon inline icon="material-symbols:star"></iconify-icon><iconify-icon
+            inline icon="material-symbols:star"></iconify-icon><iconify-icon
+            inline icon="material-symbols:star"></iconify-icon><iconify-icon
+            inline icon="material-symbols:star"></iconify-icon><iconify-icon
+            inline icon="material-symbols:star"></iconify-icon>
         </blockquote>
       </div>
 
       <div class="main-section-heading">
-        <iconify-icon inline icon="ic:outline-contact-support"></iconify-icon
-        >Contact US
+        <iconify-icon inline icon="ic:outline-contact-support"></iconify-icon>Contact
+        US
       </div>
       <div class="ContactSECT ContactForm">2
         <form>
@@ -141,8 +139,7 @@
             id="fname"
             name="firstname"
             placeholder="Your name.."
-            pattern="[A-Za-z ]+" required
-          >
+            pattern="[A-Za-z ]+" required>
 
           <label for="lname">Last Name</label>
           <input
@@ -150,8 +147,7 @@
             id="lname"
             name="lastname"
             placeholder="Your last name.."
-            pattern="[A-Za-z ]+" required
-          >
+            pattern="[A-Za-z ]+" required>
 
           <label for="country">Country</label>
           <select id="country" name="country">
@@ -166,15 +162,15 @@
             id="subject"
             name="subject"
             placeholder="Write something.."
-            style="height: 200px"
-          ></textarea>
+            style="height: 200px"></textarea>
 
           <input type="submit" value="Submit">
         </form>
         <div class="contactInfo">
           <iconify-icon inline icon="material-symbols:call"></iconify-icon> +34
           324 324 324 <br>
-          <iconify-icon inline icon="mdi:email"></iconify-icon><a href="mailto:info@bookshop.com">
+          <iconify-icon inline icon="mdi:email"></iconify-icon><a
+            href="mailto:info@bookshop.com">
             info@bookshop.com</a> <br>
           <iconify-icon inline icon="mdi:home"></iconify-icon> Carrer de Lleida,
           25, 08500 Vic, Barcelona<br>
@@ -182,16 +178,14 @@
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5287.5175996663875!2d2.27509498511035!3d41.94618966276908!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xcc2ce5db89d5f992!2sGLA%20SL!5e0!3m2!1sen!2ses!4v1671710875691!5m2!1sen!2ses"
             allowfullscreen=""
             loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
           <div class="social-media">
             Follow US <br>
             <iconify-icon icon="mdi:twitter"></iconify-icon>
             <iconify-icon icon="mdi:facebook"></iconify-icon>
             <iconify-icon icon="mdi:instagram"></iconify-icon>
             <a href="http://old.reddit.com">
-              <iconify-icon icon="mdi:reddit"></iconify-icon
-            ></a>
+              <iconify-icon icon="mdi:reddit"></iconify-icon></a>
           </div>
         </div>
       </div>
@@ -261,8 +255,7 @@
         <address>
           <a href="https://goo.gl/maps/4Z9Z9Z9Z9Z9Z9Z9Z9">
             <iconify-icon inline icon="mdi:home"></iconify-icon> Carrer de
-            Lleida, 25, 08500 Vic, Barcelona</a
-          >
+            Lleida, 25, 08500 Vic, Barcelona</a>
         </address>
 
         <div class="social-media">
@@ -274,7 +267,7 @@
       </div>
     </footer>
     <!-- *********************END FOOTER****************************** -->
-
-    <script src="https://code.iconify.design/iconify-icon/1.0.2/iconify-icon.min.js"></script>
+    <script
+      src="https://code.iconify.design/iconify-icon/1.0.2/iconify-icon.min.js"></script>
   </body>
 </html>
