--- a/src/html/login.html
+++ b/src/html/login.html
@@ -27,6 +27,10 @@
           icon="material-symbols:login"></iconify-icon>
         Login</a>
       <!-- searchbutton-->
+      <div class="search">
+        <input type="text" placeholder="Search..">
+        <button type="submit"><iconify-icon inline icon="ic:outline-search"></iconify-icon></button>
+      </div>
     </div>
 
 
@@ -35,43 +39,58 @@
     <div class="tabs">
       <input class="radiotab" name="tabs" tabindex="1" type="radio" id="tabone"
         checked="checked">
-      <label class="label main-section-heading" for="tabone"><iconify-icon inline
-        icon="material-symbols:login"></iconify-icon> Login</label>
+      <label class="label main-section-heading" for="tabone"><iconify-icon
+          inline
+          icon="material-symbols:login"></iconify-icon> Login</label>
       <div class="panel" tabindex="1">
         <form>
-          <label for="username"><iconify-icon inline icon="icon-park-outline:edit-name"></iconify-icon> Username</label><br>
+          <label for="username"><iconify-icon inline
+              icon="icon-park-outline:edit-name"></iconify-icon> Username</label><br>
           <input type="text" id="username" name="username" /><br />
 
-          <label for="password"><iconify-icon inline icon="mdi:password"></iconify-icon> Password</label> <br>
+          <label for="password"><iconify-icon inline icon="mdi:password"></iconify-icon>
+            Password</label> <br>
           <input type="password" id="password" name="password" /><br />
           <button class="login"><iconify-icon inline
-            icon="material-symbols:login"></iconify-icon> Login</button>
+              icon="material-symbols:login"></iconify-icon> Login</button>
           <div class="other-buttons">
-            <button class="Cncl-btn"><iconify-icon inline icon="material-symbols:cancel"></iconify-icon> Cancel</button>
-            <button><iconify-icon inline icon="mdi:forgot-password"></iconify-icon> Forgot Password</button></div>
+            <button class="Cncl-btn"><iconify-icon inline
+                icon="material-symbols:cancel"></iconify-icon> Cancel</button>
+            <button><iconify-icon inline icon="mdi:forgot-password"></iconify-icon>
+              Forgot Password</button></div>
         </form>
       </div>
       <input class="radiotab" tabindex="1" name="tabs" type="radio" id="tabtwo">
-      <label class="label main-section-heading" for="tabtwo"><iconify-icon inline icon="mdi:register"></iconify-icon> Register</label>
+      <label class="label main-section-heading" for="tabtwo"><iconify-icon
+          inline icon="mdi:register"></iconify-icon> Register</label>
       <div class="panel" tabindex="1">
         <form>
           <!-- Register form -->
-          <label for="name"><iconify-icon inline icon="gridicons:nametag"></iconify-icon> First Name</label>
-          <input type="text" id="name" name="name" pattern="[A-Za-z ]+" required/><br />
-          <label for="name"><iconify-icon inline icon="dashicons:nametag"></iconify-icon> Last Name</label>
-          <input type="text" id="name" name="name"pattern="[A-Za-z ]+" required /><br />
-          <label for="email"><iconify-icon inline icon="mdi:email"></iconify-icon> Email</label>
+          <label for="name"><iconify-icon inline icon="gridicons:nametag"></iconify-icon>
+            First Name</label>
+          <input type="text" id="name" name="name" pattern="[A-Za-z ]+"
+            required/><br />
+          <label for="name"><iconify-icon inline icon="dashicons:nametag"></iconify-icon>
+            Last Name</label>
+          <input type="text" id="name" name="name" pattern="[A-Za-z ]+" required
+            /><br />
+          <label for="email"><iconify-icon inline icon="mdi:email"></iconify-icon>
+            Email</label>
           <input type="email" id="email" name="email" required /><br />
-          <label for="password"><iconify-icon inline icon="mdi:password"></iconify-icon>  Password</label>
+          <label for="password"><iconify-icon inline icon="mdi:password"></iconify-icon>
+            Password</label>
           <input type="password" id="password" name="password" /><br />
-          <label for="password"><iconify-icon inline icon="line-md:confirm"></iconify-icon> Confirm Password</label>
+          <label for="password"><iconify-icon inline icon="line-md:confirm"></iconify-icon>
+            Confirm Password</label>
           <input type="password" id="password" name="password" /><br />
-          <button class="login"><iconify-icon inline icon="mdi:register"></iconify-icon> Register</button>
+          <button class="login"><iconify-icon inline icon="mdi:register"></iconify-icon>
+            Register</button>
           <div class="other-buttons">
-            <button class="Cncl-btn"><iconify-icon inline icon="material-symbols:cancel"></iconify-icon> Cancel</button>
-            <button onclick="location.href='login.html'" type="button"><iconify-icon inline
-              icon="material-symbols:login"></iconify-icon>Login Instead</button></div>
-
+            <button class="Cncl-btn"><iconify-icon inline
+                icon="material-symbols:cancel"></iconify-icon> Cancel</button>
+            <button onclick="location.href='login.html'" type="button"><iconify-icon
+                inline
+                icon="material-symbols:login"></iconify-icon>Login Instead</button></div>
         </form>
 
       </div>
