--- a/src/html/shop.html
+++ b/src/html/shop.html
@@ -27,6 +27,10 @@
       <a href="login.html"><iconify-icon inline icon="material-symbols:login"></iconify-icon>
         Login</a>
       <!-- searchbutton-->
+      <div class="search">
+        <input type="text" placeholder="Search..">
+        <button type="submit"><iconify-icon inline icon="ic:outline-search"></iconify-icon></button>
+      </div>
     </div>
 
 
@@ -95,7 +99,7 @@
           <table>
             <tbody>
               <tr>
-                <td><img src="../img/book/hp4.jpg" alt="hp4" ></td>
+                <td><img src="../img/book/hp4.jpg" alt="hp4"></td>
                 <td>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Quod at
@@ -152,48 +156,42 @@
             class="row-books"
             src="../img/book/hp1.jpg"
             onclick="currentSlide(1)"
-            alt="The Woods"
-            >
+            alt="The Woods">
         </div>
         <div class="column">
           <img
             class="row-books"
             src="../img/book/hp2.jpg"
             onclick="currentSlide(2)"
-            alt="Cinque Terre"
-            >
+            alt="Cinque Terre">
         </div>
         <div class="column">
           <img
             class="row-books"
             src="../img/book/hp3.jpg"
             onclick="currentSlide(3)"
-            alt="Mountains and fjords"
-            >
+            alt="Mountains and fjords">
         </div>
         <div class="column">
           <img
             class="row-books"
             src="../img/book/hp4.jpg"
             onclick="currentSlide(4)"
-            alt="Northern Lights"
-            >
+            alt="Northern Lights">
         </div>
         <div class="column">
           <img
             class="row-books"
             src="../img/book/hp5.jpg"
             onclick="currentSlide(5)"
-            alt="Nature and sunrise"
-            >
+            alt="Nature and sunrise">
         </div>
         <div class="column">
           <img
             class="row-books"
             src="../img/book/hp6.jpg"
             onclick="currentSlide(6)"
-            alt="Snowy Mountains"
-            >
+            alt="Snowy Mountains">
         </div>
       </div> <br>
     </div>
@@ -244,7 +242,7 @@
         </button>
       </div>
       <div class="card">
-        <img src="../img/book/hp1.jpg" alt="hp1" >
+        <img src="../img/book/hp1.jpg" alt="hp1">
         <h1>Tailored Jeans</h1>
         <span class="og-price">$29.99 </span>
         <p class="price">$19.99</p>
@@ -263,7 +261,7 @@
         </button>
       </div>
       <div class="card">
-        <img src="../img/book/hp1.jpg" alt="hp1" >
+        <img src="../img/book/hp1.jpg" alt="hp1">
         <h1>Tailored Jeans</h1>
         <span class="og-price">$29.99 </span>
 
@@ -283,7 +281,7 @@
         </button>
       </div>
       <div class="card">
-        <img src="../img/book/hp1.jpg" alt="hp1" >
+        <img src="../img/book/hp1.jpg" alt="hp1">
         <h1>Tailored Jeans</h1>
         <span class="og-price">$29.99 </span>
         <p class="price">$19.99</p>
@@ -302,7 +300,7 @@
         </button>
       </div>
       <div class="card">
-        <img src="../img/book/hp1.jpg" alt="hp1" >
+        <img src="../img/book/hp1.jpg" alt="hp1">
         <h1>Tailored Jeans</h1>
         <span class="og-price">$29.99 </span>
         <p class="price">$19.99</p>
