--- a/src/index.html
+++ b/src/index.html
@@ -154,15 +154,15 @@
             BY GENRE
           </div>
           <div class="genre-grid">
-            <div class="genre-cell">Adventure</div>
-            <div class="genre-cell">Comic Book</div>
-            <div class="genre-cell">Fantasy</div>
-            <div class="genre-cell">Action</div>
-            <div class="genre-cell">Manga</div>
-            <div class="genre-cell">Historical Fiction</div>
-            <div class="genre-cell">Classics</div>
-            <div class="genre-cell">Mystery</div>
-            <div class="genre-cell">Non Fiction</div>
+            <a href="html/shop.html"><div class="genre-cell">Adventure</div></a>
+            <a href="html/shop.html"><div class="genre-cell">Comic Book</div></a>
+            <a href="html/shop.html"><div class="genre-cell">Fantasy</div></a>
+            <a href="html/shop.html"><div class="genre-cell">Action</div></a>
+            <a href="html/shop.html"><div class="genre-cell">Manga</div></a>
+            <a href="html/shop.html"><div class="genre-cell">Historical Fiction</div></a>
+            <a href="html/shop.html"><div class="genre-cell">Classics</div></a>
+            <a href="html/shop.html"><div class="genre-cell">Mystery</div></a>
+            <a href="html/shop.html"><div class="genre-cell">Non Fiction</div></a>
           </div>
         </div>
 
